author search/create with routes and db

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,9 @@
     <title>Mybrary</title>
   </head>
   <body>
-    Before
+    <%- include('../partials/error-message.ejs') %>
     <br />
-    <%- body %>
+    <%- include('../partials/header.ejs') %> <%- body %>
     <br />
-    After
   </body>
 </html>
