--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -1,5 +1,5 @@
 <h2>Search Authors</h2>
-<form action="/authors" method="get">
+<form action="/authors" method="GET">
   <label for="name">Name</label>
   <input type="text" name="name" id="name" value="<%= searchOptions.name  %>" />
   <button type="submit">Search</button>
